rc/rc-pilot/main/default/objects/SBQQ__Quote__c/fields/TotalAdjustmentDistAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustmentDistAmount__c</fullName>
    <label>TotalAdjustmentDistAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>