rc/rc-pilot/main/default/objects/SBQQ__Quote__c/fields/TotalListAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalListAmount__c</fullName>
    <label>TotalListAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>