rc/rc-pilot/main/default/objects/SBQQ__Quote__c/fields/TotalProductAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalProductAmount__c</fullName>
    <label>TotalProductAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>